--- a/css/todoEstilo.css
+++ b/css/todoEstilo.css
@@ -1669,34 +1669,40 @@ iframe{
 /* responder oslicitud*/
 .containerDatos{
 	width: 100%;
+	margin-top: 4%;
 }
-.solicDatos fieldset{
-	width: 40%;
-}
+
 .solicDatos input{
- 	display: block;
+
 	margin-top: 0.5%;
+	width: 100%;
 }
 .solicDetalles #textArea{
 	resize :none;
-	width: 500px;
+	width: 100%;
 	height: 110px;
 	
 }
-.solicDetalles,.solicDatos{
-	display: inline-block;
-	margin-top: 20px;
+.solicDetalles,.solicDatos,.solicRespuesta{
+	display: inline;
+	margin: 1% auto;
+	width: 100%;
 }
-.solicDatos{
-	margin: 0 40px 7px 40px;
-}
-.solicRespuesta #textArea{
+.solicRespuesta #textArea2{
 	resize :none;
-	width: auto;
+	width: 100%;
 	height: 125px;
 }
 .solicRespuesta{
-	display: inline;
+	width:80%;
+	margin: 10px auto;
+}
+
+fieldset{
+	border: 0;
+}
+.solicDatos input[type="text"]:disabled, #textArea:disabled{
+	background-color:  #FFFFF0;
 }
  /* fin responder solicitud*/ 
 /* FIN GESTION INFORMACION*/
