--- a/css/printRecibo.css
+++ b/css/printRecibo.css
@@ -6,14 +6,14 @@
  margin: 0mm;  /* this affects the margin in the printer settings */
 }
 
-.site-header,.estilo-article-wrap,footer,.intranetPrincipal,.titulo,.estiloGestionLibros,.displayInTop,hr{
+.site-header,.estilo-article-wrap,footer,.intranetPrincipal,.titulo,.estiloGestionLibros,.displayInTop,hr,.ocul{
 	display: none;
 }
 #canMensualidades{
 	width: 800px !important;
 	margin-left: 10%;
 }
-#monto,#ced,#personaPago,#monto2,#conceptoP,#dia,#mes,#year{
+#monto,#personaPago,#monto2,#conceptoP,#dia,#mes,#year{
 	text-transform: uppercase;
 	font-weight: bold;
 	border:0;
