BD + Calculo de calificaciones por alumno
Falta guardar las notas en la BD

--- a/css/todoEstilo.css
+++ b/css/todoEstilo.css
@@ -1710,9 +1710,9 @@ fieldset{
 /* FIN GESTION INFORMACION*/
 
 /* GESTION CALIF*/ 
-#guar,#calc{
+#guar,#calc,#msjss,#Toculta{
 	display: none;
 }
 
-/* FIN GESTION CALIF*/
+/* FIN GESTION CALIF #110DFB*/
 /* FIN EDICION MANUEL*/
