validaciones calificaciones pt1

--- a/css/todoEstilo.css
+++ b/css/todoEstilo.css
@@ -1764,7 +1764,7 @@ fieldset{
 /* FIN GESTION INFORMACION*/
 
 /* GESTION CALIF*/ 
-#guar,#calc,#msjss,#Toculta{
+#guar,#calc,#msjss,#Toculta,#msjss2,#msjss3{
 	display: none;
 }
 
