--- a/css/miEstilo4.css
+++ b/css/miEstilo4.css
@@ -1,13 +1,13 @@
 body{
 }
-body.p-inicio .a-inicio,
+/*body.p-inicio .a-inicio,
 body.p-admision .a-admision,
 body.p-contacto .a-contacto,
 body.p-institucion .a-institucion,
 body.p-propuesta .a-propuesta {
   background: #452294;
   
-}
+}*/
 #navegacion
 {
 	list-style: none;
